[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/UI/HUD.gd" type="Script" id=1]
[ext_resource path="res://Textures/VFX/Radial.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Prefabs/UI/ElevationProgressBar.tscn" type="PackedScene" id=3]

[node name="HUD" type="CanvasLayer"]
layer = 2
script = ExtResource( 1 )

[node name="Margin" type="Control" parent="."]
modulate = Color( 0.768627, 1, 0.662745, 0.627451 )
anchor_left = 0.04
anchor_top = 0.04
anchor_right = 0.95
anchor_bottom = 0.95
mouse_filter = 2

[node name="ElevationProgressBarR" parent="Margin" instance=ExtResource( 3 )]

[node name="ElevationProgressBarL" parent="Margin" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_right = 0.0
margin_left = -8.0
margin_right = 0.0

[node name="CheeseProgress" type="TextureProgress" parent="Margin"]
margin_right = 128.0
margin_bottom = 128.0
rect_pivot_offset = Vector2( 64, 64 )
mouse_filter = 2
value = 45.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 2 )
fill_mode = 5
tint_under = Color( 0, 0, 0, 1 )
tint_progress = Color( 1, 0.584314, 0, 1 )
nine_patch_stretch = true

[node name="Label" type="Label" parent="Margin/CheeseProgress"]
anchor_left = -0.25
anchor_top = -0.25
anchor_right = 1.25
anchor_bottom = 1.25
text = "Cheese"
align = 1
valign = 2

[node name="JetpackProgress" type="TextureProgress" parent="Margin"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -128.0
margin_bottom = 128.0
rect_pivot_offset = Vector2( 64, 64 )
mouse_filter = 2
value = 45.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 2 )
fill_mode = 5
tint_under = Color( 0, 0, 0, 1 )
tint_progress = Color( 0, 0.717647, 1, 1 )
nine_patch_stretch = true

[node name="Label" type="Label" parent="Margin/JetpackProgress"]
anchor_left = -0.25
anchor_top = -0.25
anchor_right = 1.25
anchor_bottom = 1.25
text = "Jetpack"
align = 1
valign = 2

[node name="Label" type="Label" parent="Margin"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "10:00"
align = 1

[node name="Tween" type="Tween" parent="."]
playback_process_mode = 0

[node name="OrbitLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.341176, 0, 0, 1 )
text = "DANGER:
Leaving Orbit"
align = 1
valign = 1
